2022-11-09T16:23:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429917649 # 598
* notice: last 14d: unq all: 8 21
* notice: prev accum: outdated-unq outdated-all / unq all: 235 430 / 250 452
* notice: next accum: outdated-unq outdated-all / unq all: 235 430 / 250 451
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
* notice: removed / changed dates: [] / [2022-10-26]

2022-11-09T08:22:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3426465299 # 597
* notice: last 14d: unq all: 8 22
* notice: prev accum: outdated-unq outdated-all / unq all: 235 430 / 250 453
* notice: next accum: outdated-unq outdated-all / unq all: 235 430 / 250 452
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
* notice: removed / changed dates: [] / [2022-10-26]

2022-11-09T01:24:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424595208 # 596
* notice: last 14d: unq all: 8 23
* notice: prev accum: outdated-unq outdated-all / unq all: 233 427 / 249 451
* notice: next accum: outdated-unq outdated-all / unq all: 235 430 / 250 453
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-25] / []

2022-11-08T16:24:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3421276207 # 595
* notice: last 14d: unq all: 9 24
* notice: prev accum: outdated-unq outdated-all / unq all: 233 427 / 250 452
* notice: next accum: outdated-unq outdated-all / unq all: 233 427 / 249 451
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-10-25]

2022-11-08T01:23:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3415556300 # 593