@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-09T16:23:10Z",
-  "count_outdated" : 430,
-  "uniques_outdated" : 235,
-  "count" : 451,
+  "timestamp" : "2022-11-10T01:24:37Z",
+  "count_outdated" : 433,
+  "uniques_outdated" : 236,
+  "count" : 453,
   "uniques" : 250,
   "clones" : [
-    {
-      "timestamp": "2022-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-27T00:00:00Z",
       "count": 1,
