@@ -1,3 +1,11 @@
+2022-11-10T01:24:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3433219396 # 599
+* notice: last 14d: unq all: 8 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 235 430 / 250 451
+* notice: next accum: outdated-unq outdated-all / unq all: 236 433 / 250 453
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-26] / []
+
 2022-11-09T16:23:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429917649 # 598
 * notice: last 14d: unq all: 8 21
